fixed text align on pid tuning tiltlebar ...
... is now on center ... same as on accel table

--- a/tabs/pid_tuning.css
+++ b/tabs/pid_tuning.css
@@ -240,7 +240,7 @@
 
 .tab-pid_tuning .pid_titlebar th {
     padding: 5px;
-    text-align: left;
+    text-align: center;
     border-right: 1px solid #ccc;
     width: 14%;
 
